@@ -1,5 +1,8 @@
 10.1.13
 ------
+(RB=949067)
+Refactor batch_get response conversion to entity response code into BatchKVResponse to be consistent with other decoder behavior.
+
 (RB=947745)
 Make 'optional' fields more explicit in .pdl grammar
 
